# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("${build_root}/config/compiler/compiler.gni")

import("${chip_root}/src/lib/lib.gni")

source_set("mode-select-linux-common") {
  sources = [
    "${chip_root}/examples/mode-select/mode-select-common/src/static-supported-modes-manager.cpp",
    "${chip_root}/examples/mode-select/mode-select-common/src/binding-handler.cpp",
    "${chip_root}/examples/mode-select/mode-select-common/src/bridged-actions-stub.cpp",
    "src/main-common.cpp"
  ]

  deps = [
    "${chip_root}/examples/mode-select/mode-select-common",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
  ]

  include_dirs =
  [ "${chip_root}/examples/mode-select/mode-select-common/include" ]

  if (!defined(public_configs)) {
    public_configs = []
  }
  public_configs += [
    "${chip_root}/examples/mode-select/mode-select-common:mode-select-common_config"
  ]

  cflags = [ "-Wconversion" ]

  if (chip_build_libshell) {
    defines = [ "ENABLE_CHIP_SHELL" ]
  }
}

if (is_libfuzzer) {
  executable("mode-select-app-fuzzing") {
    sources = [ "src/fuzzing-main.cpp" ]

    deps = [
      ":mode-select-linux-common",
      "${chip_root}/examples/platform/linux:app-main",
    ]

    cflags = [ "-Wconversion" ]

    include_dirs =
    [ "${chip_root}/examples/mode-select/mode-select-common/include" ]

    output_dir = root_out_dir
  }
} else {
  executable("mode-select-app") {
    sources = [ "src/main.cpp" ]

    deps = [
      ":mode-select-linux-common",
      "${chip_root}/examples/platform/linux:app-main",
    ]

    cflags = [ "-Wconversion" ]

    include_dirs =
    [ "${chip_root}/examples/mode-select/mode-select-common/include" ]

    output_dir = root_out_dir
  }
}

group("linux") {
  deps = []
  if (is_libfuzzer) {
    deps += [ ":mode-select-app-fuzzing" ]
  } else {
    deps += [ ":mode-select-app" ]
  }
}
